@@ -45,7 +45,7 @@ AC_SUBST(BURN_CFLAGS)
 AC_SUBST(BURN_LIBS)
 
 # Find the UI libraries
-PKG_CHECK_MODULES(UI, gtk+-2.0 >= 2.6  libglade-2.0  gconf-2.0  libgnomeui-2.0 >= 2.13.0  gnome-vfs-2.0 >= 2.9 gnome-vfs-module-2.0 > 2.9 gmodule-2.0)
+PKG_CHECK_MODULES(UI, gtk+-2.0 >= 2.8  libglade-2.0  gconf-2.0  libgnomeui-2.0 >= 2.13.0  gnome-vfs-2.0 >= 2.9 gnome-vfs-module-2.0 > 2.9 gmodule-2.0)
 AC_SUBST(UI_CFLAGS)
 AC_SUBST(UI_LIBS)
 
